vchain-crm-frontend-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-frontend
spec:
    type: NodePort
    selector:
        app: crm-frontend
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
