vchain-crm-frontend-deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: crm-fontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: crm-frontend
          servicePort: 80
